force-app/main/default/objects/CWB_File_Setting__c/CWB_File_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>CWB File Setting</label>
</CustomObject>