force-app/main/default/objects/CWB_File_Setting__c/fields/ELFI_Originator_Id__c.field-meta.xml
<CustomField>
    <fullName>ELFI_Originator_Id__c</fullName>
    <label>ELFI Originator Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>