force-app/main/default/objects/CWB_File_Setting__c/fields/ELFI_Originator_Long_Name__c.field-meta.xml
<CustomField>
    <fullName>ELFI_Originator_Long_Name__c</fullName>
    <label>ELFI Originator Long Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>