force-app/main/default/objects/CWB_File_Setting__c/fields/Rhino_Destination_Data_Centre__c.field-meta.xml
<CustomField>
    <fullName>Rhino_Destination_Data_Centre__c</fullName>
    <label>Rhino Destination Data Centre</label>
    <length>5</length>
    <type>Text</type>
</CustomField>