force-app/main/default/objects/CWB_File_Setting__c/fields/Rhino_Originator_Id__c.field-meta.xml
<CustomField>
    <fullName>Rhino_Originator_Id__c</fullName>
    <label>Rhino Originator Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>