force-app/main/default/objects/CWB_File_Setting__c/fields/Seahold_Account_Number_for_Returns__c.field-meta.xml
<CustomField>
    <fullName>Seahold_Account_Number_for_Returns__c</fullName>
    <label>Seahold Account Number for Returns</label>
    <length>12</length>
    <type>Text</type>
</CustomField>