force-app/main/default/objects/CWB_File_Setting__c/fields/Seahold_Destination_Data_Centre__c.field-meta.xml
<CustomField>
    <fullName>Seahold_Destination_Data_Centre__c</fullName>
    <label>Seahold Destination Data Centre</label>
    <length>5</length>
    <type>Text</type>
</CustomField>