force-app/main/default/objects/CWB_File_Setting__c/fields/Seahold_File_Number__c.field-meta.xml
<CustomField>
    <fullName>Seahold_File_Number__c</fullName>
    <label>Seahold File Number</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>