force-app/main/default/objects/CWB_File_Setting__c/fields/Seahold_Institutional_ID_for_Returns__c.field-meta.xml
<CustomField>
    <fullName>Seahold_Institutional_ID_for_Returns__c</fullName>
    <label>Seahold Institutional ID for Returns</label>
    <length>9</length>
    <type>Text</type>
</CustomField>