force-app/main/default/objects/CWB_File_Setting__c/fields/Seahold_Originator_Id__c.field-meta.xml
<CustomField>
    <fullName>Seahold_Originator_Id__c</fullName>
    <label>Seahold Originator Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>