force-app/main/default/objects/CWB_File_Setting__c/fields/Seahold_Originator_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Seahold_Originator_Short_Name__c</fullName>
    <label>Seahold Originator Short Name</label>
    <length>15</length>
    <type>Text</type>
</CustomField>